--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "jquery": "~2.1.1",
     "modernizr": "~2.8.1",
     "foundation": "*",
-    "p5js": "0.4.9"
+    "p5js": "0.4.9",
+    "PreloadJS": "*"
   },
   "devDependencies": {
     "chai": "~3.2.0",
