--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "jquery": "~2.1.1",
     "scrollmagic": "~2.0.5",
     "three": "*",
-    "vue": "*"
+    "vue": "~1.0.4"
   },
   "eslintConfig": {
     "env": {
