--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-cache": "^0.2.8",
     "gulp-eslint": "^0.13.2",
+    "gulp-gzip": "*",
     "gulp-if": "^1.2.5",
     "gulp-jshint": "*",
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.1.1",
-    "gulp-minify-html": "^1.0.0",
+    "gulp-minify-html": "^1.0.2",
     "gulp-notify": "*",
     "gulp-plumber": "^1.0.1",
+    "gulp-replace": "^0.5.3",
     "gulp-sass": "^2.0.0",
     "gulp-size": "^1.2.1",
     "gulp-sourcemaps": "^1.5.0",
@@ -29,7 +31,12 @@
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.1.1",
     "gulp-util": "*",
+    "gulp-uncss": "*",
+    "imagemin-pngquant": "^4.1.0",
+    "imagemin-jpegtran": "^4.1.0",
+    "imagemin-gifsicle": "^4.1.0",
     "jshint-stylish": "*",
+    "jpegtran": "0.2.0",
     "lodash": "*",
     "main-bower-files": "^2.5.0",
     "opn": "^1.0.1",
