--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
     "node": ">=0.12.0"
   },
   "devDependencies": {
-    "babel-core": "^5.5.6",
-    "browser-sync": "^2.2.1",
-    "browserify": "^11.0.1",
-    "browserify-shim": "^3.8.10",
+    "babel-core": "^6.5.1",
+    "babel-plugin-transform-runtime": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-runtime": "^5.8.35",
+    "bower": "^1.7.7",
     "bower-resolve": "*",
+    "browser-sync": "^2.2.1",
+    "browserify": "*",
+    "browserify-shim": "^3.8.10",
     "del": "^1.1.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-cache": "^0.2.8",
+    "gulp-cssnano": "^2.1.0",
     "gulp-eslint": "^0.13.2",
-    "gulp-gzip": "*",
+    "gulp-htmlmin": "1.3.0",
     "gulp-if": "^1.2.5",
-    "gulp-jshint": "*",
     "gulp-imagemin": "^2.2.1",
+    "gulp-jshint": "*",
     "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.1.1",
-    "gulp-minify-html": "^1.0.2",
     "gulp-notify": "*",
     "gulp-plumber": "^1.0.1",
     "gulp-replace": "^0.5.3",
@@ -31,20 +34,20 @@
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.1.1",
     "gulp-util": "*",
-    "gulp-uncss": "*",
-    "imagemin-pngquant": "^4.1.0",
-    "imagemin-jpegtran": "^4.1.0",
     "imagemin-gifsicle": "^4.1.0",
+    "imagemin-jpegtran": "^4.1.0",
+    "imagemin-pngquant": "^4.1.0",
+    "jquery": "*",
+    "jshint": "*",
     "jshint-stylish": "*",
-    "jpegtran": "0.2.0",
-    "lodash": "*",
+    "lodash": "4.0.0",
     "main-bower-files": "^2.5.0",
-    "opn": "^1.0.1",
-    "pretty-hrtime": "*",
     "remapify": "*",
-    "stringify": "^3.1.0",
+    "stringify": "^3.2.1",
     "vinyl-source-stream": "*",
-    "wiredep": "^2.2.2",
+    "vue-hot-reload-api": "^1.3.2",
+    "vueify": "*",
+    "vueify-insert-css": "^1.0.0",
     "watchify": "*",
     "yargs": "*"
   },
@@ -55,11 +58,10 @@
     "masonry-layout": "*",
     "scrollmagic": "~2.0.5",
     "three": "*",
-    "vue": "~1.0.10",
+    "vue": "*",
     "vue-router": "*",
     "p5": "*"
   },
-
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.js",
     "foundation": "./node_modules/foundation-sites/js/foundation.js"
@@ -73,7 +75,6 @@
       "browserify-shim"
     ]
   },
-
   "eslintConfig": {
     "env": {
       "node": true,
