--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "yargs": "*"
   },
   "dependencies": {
+    "fastclick": "~1.0.6",
+    "smooth-scroll": "cferdinandi/smooth-scroll",
     "bourbon": "^4.2.6",
     "gsap": "*",
     "jquery": "~2.1.1",
