--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-transform-runtime": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-runtime": "^5.8.35",
+    "babelify": "*",
     "bower": "^1.7.7",
     "bower-resolve": "*",
     "browser-sync": "^2.2.1",
@@ -21,7 +22,7 @@
     "gulp-eslint": "^0.13.2",
     "gulp-htmlmin": "1.3.0",
     "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.2.1",
+    "gulp-imagemin": "*",
     "gulp-jshint": "*",
     "gulp-load-plugins": "^0.10.0",
     "gulp-notify": "*",
@@ -34,9 +35,9 @@
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.1.1",
     "gulp-util": "*",
-    "imagemin-gifsicle": "^4.1.0",
-    "imagemin-jpegtran": "^4.1.0",
-    "imagemin-pngquant": "^4.1.0",
+    "imagemin-gifsicle": "*",
+    "imagemin-jpegtran": "*",
+    "imagemin-pngquant": "*",
     "jquery": "*",
     "jshint": "*",
     "jshint-stylish": "*",
@@ -53,7 +54,7 @@
   },
   "dependencies": {
     "fastclick": "~1.0.6",
-    "smooth-scroll": "cferdinandi/smooth-scroll",
+    "smooth-scrolling": "~2.1.1",
     "bourbon": "^4.2.6",
     "gsap": "*",
     "jquery": "~2.1.1",
