--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "vue": "*",
     "vue-router": "*",
     "vue-touch": "*",
-    "p5": "*"
+    "pixi.js": "3.0.11 "
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.js",
