--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "vue": "*",
     "vue-router": "*",
     "vue-touch": "*",
-    "pixi.js": "3.0.11 "
+    "pixi.js": "3.0.11",
+    "vue-lazyload": "*"
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.js",
