--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "vue-router": "*",
     "vue-touch": "*",
     "pixi.js": "3.0.11",
-    "vue-lazyload": "*"
+    "vue-image-loader": "*"
   },
   "browser": {
     "jquery": "./node_modules/jquery/dist/jquery.js",
